# FreeRtosOnAvr

./: .gitignore  .gitmodules  README.md
3rd party/Procyuon avrlib/: enc28j60.c  enc28j60.h  enc28j60_2.c
3rd party/tools/Hex2bin/: ChangeLog_hex2bin  ChangeLog_mot2bin  Makefile  README  hex2bin  hex2bin-1.0.8.lsm  hex2bin.pod  mot2bin
Doc/AtXmegaRobo/: download.sh
Doc/DidacticSystem/: hardware.dia
Doc/DidacticSystem/Acucator module/: diode.dia  em_lightCoroutine.dia  em_lightFirmware.dia  em_rollerCoroutine.dia  firmware.dia  hardware.dia
Doc/DidacticSystem/Main Controller/: firmware.dia  hardware.dia
Doc/DidacticSystem/Programmer/: hardware.dia
FreeRtosCore/Source/: queue.c  tasks.c
FreeRtosCore/Source/include/: portable.h  queue.h  task.h
FreeRtosCore/portable/MemMang/: heap_avr.c
Hardware/: download.sh
Hardware/ArduinoUno/: adruinoIO.brd  adruinoIO.sch
Hardware/AtXmega/RoverController/: DESCRIPTION  HC12.bak  RPI.sch  RobotElementy.lbr  USB.sch  ZigBee.sch  connectors.txt  cpu.sch  czujnikiRpi3b.kicad_pcb  opto.sch  pwr.sch  rover.sch  sim900.sch
Hardware/AtXmegaRobo/: DVRpowerSupply.brd  DVRpowerSupply.sch  HeatingController.brd  HeatingController.sch  robo1.brd  robo1.sch  robo1rev2.brd  robo1rev2.sch
Hardware/DidacticSystem/: IOmodule.brd  IOmodule.sch  executingModule.brd  executingModule.sch  executingModuleTriac.brd  executingModuleTriac.sch  mainControllerRev3.brd  mainControllerRev3.sch  programmer.brd  programmer.sch  programmerRev2.brd  programmerRev2.sch
Hardware/DidacticSystem/Box/: bottom.dia  top.dia
Lib/: .kdev_include_paths_student  Rs485_prot.c  Rs485_prot.lst  adxl345.c  bmp085.c  cmdline.c  cmdline.lst  ds1305.c  ds1305.lst  enc28j60.c  enc28j60.lst  i2c.c  l3g4200d.c  lcd.c  mcp3008.c  mcp3008.lst  mcp4150.c  mcp4150.lst  memory_x.c  memory_x.lst  mhc5883l.c  mpc23s17.c  mpc23s17.lst  queueStream.c  queueStream.lst  ramdysk.c  ramdysk.lst  rc_ibus.c  spi.c  spi.lst  spiXmega.c  staryStack.c  tlvProt.c  tlvProt.lst  vt100.c  vt100.lst  xmodem.c  xmodem.lst
Lib/include/: Rs485_prot.h  adxl345.h  bmp085.h  cVector.h  cmdline.h  ds1305.h  enc28j60.h  ff.h  i2c.h  integer.h  l3g4200d.h  lcd.h  mcp3008.h  mcp4150.h  memory_x.h  mhc5883l.h  mpc23s17.h  protocol1.h  queueStream.h  ramdysk.h  rc_ibus.h  sd_diskio.h  spi.h  spiXmega.h  staryStack.h  tlvProt.h  vt100.h  xModemCommands.h  xmodem.h
Lib/net/: arp.c  arp.lst  checksum.c  icmp.c  icmp.lst  icmp6.c  ip.c  ip.lst  ipv6-nd.c  ipv6.c  net.c  net.lst  nic.c  nic.lst  tcp.c  tcp.lst  tcp6.c  udp.c  udp.lst  uip-netif.c
Lib/net/include/: arp.h  checksum.h  icmp.h  icmp6.h  ip.h  ipv6-nd.h  ipv6.h  ipv6Conf.h  net.h  nic.h  tcp.h  tcp6.h  udp.h  uip-netif.h
LibRtos/: twi.c
LibRtos/include/: ibus.h  twi.h
LibXc/: cmdline.c
Projects/ArduinoUno/cliHello/: FreeRTOSConfig.h  Makefile  cli_task.c  cli_task.h  compile_commands.json  configuration.h  hardware.h  hardwareConfig.h  loop_task.c  loop_task.h  main.c  main.h  serial.c  serial.h  softwareConfig.h  vty.c  vty.h
Projects/AtXmega/DvrController.X/: avr_compiler.h  cli_task.c  cli_task.h  dvrController.layout  flash.sh  gccFlash.sh  hardware.c  hardware.h  hardware_en.h  main.c  main.h  serial.h  softwareConfig.h  tlv.c  tlv_task.c  tlv_task.h  vty.c  vty.h  xc8flash.sh
Projects/AtXmega/RoverController.X/: FreeRTOSConfig.h  MakefileGcc  MakefileOld  cli_task.c  cli_task.h  flash.sh  hardware.c  hardware.dia  hardware.h  hardwareBsp.h  hardwareConfig.h  main.c  main.h  main_task.h  rc_task.c  rc_task.h  sensors.h  serial.c  serial.h  softwareConfig.h  taskSensors.c  taskSensors.h  tlv.c  tlv.h  tlv_task.c  vty.c  vty.h  vty_en.h  vty_pl.h  xc8flash.sh
Projects/AtXmegaRobo/Drobo/: FreeRTOSConfig.h  cli_task.c  hardware.c  hardwareConfig.h  hc12.c  hc12.h  main.c  main_task.h  sim900.c  vty.c  vty_en.h
Projects/AtXmegaRobo/DvrController/: FreeRTOSConfig.h  Makefile  cli_task.h  dvrController.cbp  dvrController.layout  hardware.c  hardware.h  help_iox128a4u.h  main.c  main.h  tlv.h  vty.c  vty_en.h
Projects/DidacticSystem/Adam/RollerBlinderTriac/: .kdev_include_paths  CMakeLists.txt  FreeRTOSConfig.h  hardware.c  hardware.h  main.c
Projects/DidacticSystem/Adam/RollerBlinderTriac/Bootloader/: Bootloader.kdev4  CMakeLists.txt  Makefile  flash.c  serial.h
Projects/DidacticSystem/_templAcModRelayers/: main.c  serial.c  serial.h
Projects/DidacticSystem/_templAcModTriacs/: automat.c  hardware.h  main.h
Projects/DidacticSystem/_templMainController/: .kdev_include_paths_student  FreeRTOSConfig.h  configuration.c  configuration.h  hardwareConfig.h  sensors_task.c  softwareConfig.h  vty.c  vty_en.h  vty_pl.h
Projects/HomeAutomatization/ActuatorModule.X/: program.sh.txt
Projects/HomeAutomatization/Common/: protocol_TlvRs485.h
ProjectsOld/AtXmegaRobo/Drobo/: Makefile  configuration.h  drobo.cbp  hardware.h  hardware_en.h  sim900.h  softwareConfig.h  vty.h
ProjectsOld/AtXmegaRobo/DvrController/: configuration.c  hardware.c  main.c  main_task.c  main_task.h  tlv.c  vty.c  vty.h
ProjectsOld/DidacticSystem/_templAcModTriacs/: CMakeLists.txt  FreeRTOSConfig.h  Makefile  executingModule.cbp  hardware.c
ProjectsOld/DidacticSystem/_templMainController/: CMakeLists.txt  Makefile  Makefile64  Rs485_prot_en.h  Rs485_prot_pl.h  cli_task.h  hardware.c  hardware.h  hardware_en.h  main.c  mainController.cbp  netstack_task.c  netstack_task.h  rtc.c  serial.c
Tools/avrMultiTool/: avrMultiTool.backup  avrMultiTool.conf  flashFt232.sh
Tools/avrMultiTool/Stk500/: Makefile  flash.sh  main.c
Tools/avrMultiTool/jtagICE/: README.txt  flash.sh
Tools/avrMultiToolv2/: opis.txt
Tools/netClient/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt  netClient.kdev4  netConsole  netconsole.c  netconsole.h
Tools/netClient/.kdev4/: udpClient.kdev4
Tools/serialCapture/: serialCapture.c
Tools/udpClient/: CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt  udpClient.kdev4  udpconsole.c  udpconsole.h  vt100.c  vt100.h
drv/: ibus.c  sim900.c  twi.c
drv/include/: twi.h
(+259 files in other folders)
